@@ -32,6 +32,9 @@
 /* #define MSN_DEBUG_SLP_VERBOSE 1 */
 /* #define MSN_DEBUG_SLP_FILES 1 */
 
+/* #define MSN_DEBUG_NS 1 */
+/* #define MSN_DEBUG_SB 1 */
+
 #include "internal.h"
 
 #include "account.h"
@@ -88,29 +91,32 @@ typedef enum
 
 typedef enum
 {
-	MSN_CLIENT_CAP_WIN_MOBILE = 0x001,
-	MSN_CLIENT_CAP_UNKNOWN_1  = 0x002,
-	MSN_CLIENT_CAP_VIEW_INK   = 0x004,
-	MSN_CLIENT_CAP_SEND_INK   = 0x008,
-	MSN_CLIENT_CAP_VIDEO_CHAT = 0x010,
-	MSN_CLIENT_CAP_BASE       = 0x020,
-	MSN_CLIENT_CAP_MSNMOBILE  = 0x040,
-	MSN_CLIENT_CAP_MSNDIRECT  = 0x080,
-	MSN_CLIENT_CAP_WEBMSGR    = 0x100
+	MSN_CLIENT_CAP_WIN_MOBILE = 0x0001,
+	MSN_CLIENT_CAP_UNKNOWN_1  = 0x0002,
+	MSN_CLIENT_CAP_VIEW_INK   = 0x0004,
+	MSN_CLIENT_CAP_SEND_INK   = 0x0008,
+	MSN_CLIENT_CAP_VIDEO_CHAT = 0x0010,
+	MSN_CLIENT_CAP_BASE       = 0x0020,
+	MSN_CLIENT_CAP_MSNMOBILE  = 0x0040,
+	MSN_CLIENT_CAP_MSNDIRECT  = 0x0080,
+	MSN_CLIENT_CAP_WEBMSGR    = 0x0100,
+	MSN_CLIENT_CAP_DIRECTIM   = 0x4000,
+	MSN_CLIENT_CAP_WINKRCV    = 0x8000
 
 } MsnClientCaps;
 
 typedef enum
 {
 	MSN_CLIENT_VER_5_0 = 0x00,
-	MSN_CLIENT_VER_6_0 = 0x10,
-	MSN_CLIENT_VER_6_1 = 0x20,
-	MSN_CLIENT_VER_6_2 = 0x30,
-	MSN_CLIENT_VER_7_0 = 0x40
+	MSN_CLIENT_VER_6_0 = 0x10,	/* MSNC1 */
+	MSN_CLIENT_VER_6_1 = 0x20,	/* MSNC2 */
+	MSN_CLIENT_VER_6_2 = 0x30,	/* MSNC3 */
+	MSN_CLIENT_VER_7_0 = 0x40,	/* MSNC4 */
+	MSN_CLIENT_VER_7_5 = 0x50	/* MSNC5 */
 
 } MsnClientVerId;
 
-#define MSN_CLIENT_ID_VERSION      MSN_CLIENT_VER_6_0
+#define MSN_CLIENT_ID_VERSION      MSN_CLIENT_VER_7_0
 #define MSN_CLIENT_ID_RESERVED_1   0x00
 #define MSN_CLIENT_ID_RESERVED_2   0x00
 #define MSN_CLIENT_ID_CAPABILITIES MSN_CLIENT_CAP_BASE
